{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 108,
  "lineage": "ac6a67b7-527c-d708-9d3a-139661ec9b36",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "privatert",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0614be138faf68d1a",
            "id": "rtb-0614be138faf68d1a",
            "owner_id": "381144738155",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "default-rt"
            },
            "vpc_id": "vpc-0aa0c8a1bb4f7fcdb"
          },
          "dependencies": [
            "module.networking.aws_vpc.lavpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "each": "list",
      "provider": "module.compute.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07e1fa806544a2c40",
            "arn": "arn:aws:ec2:ap-south-1:381144738155:instance/i-064f0cdabee3013d9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-064f0cdabee3013d9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf_auth",
            "monitoring": false,
            "primary_network_interface_id": "eni-05f32f3c4e48a2d7f",
            "private_dns": "ip-10-123-1-226.ap-south-1.compute.internal",
            "private_ip": "10.123.1.226",
            "public_ip": "13.234.240.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09fdbac59457fb225",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f83b5fd273cdc31f",
            "tags": {
              "Name": "server_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0690540b17aff8784"
            ]
          },
          "dependencies": [
            "module.compute.aws_key_pair.tf_auth",
            "module.networking.aws_security_group.lasg",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.lavpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07e1fa806544a2c40",
            "arn": "arn:aws:ec2:ap-south-1:381144738155:instance/i-091bd9c110c5ba568",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-091bd9c110c5ba568",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf_auth",
            "monitoring": false,
            "primary_network_interface_id": "eni-065dd983c74b251e2",
            "private_dns": "ip-10-123-2-245.ap-south-1.compute.internal",
            "private_ip": "10.123.2.245",
            "public_ip": "35.154.250.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d3a77cbb1beee482",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a9698291759824c6",
            "tags": {
              "Name": "server_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0690540b17aff8784"
            ]
          },
          "dependencies": [
            "module.compute.aws_key_pair.tf_auth",
            "module.networking.aws_security_group.lasg",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.lavpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "laigw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0d50cf301af55abac",
            "owner_id": "381144738155",
            "tags": {
              "Name": "la-igw"
            },
            "vpc_id": "vpc-0aa0c8a1bb4f7fcdb"
          },
          "dependencies": [
            "module.networking.aws_vpc.lavpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicrt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-054625c04e3ec99cd",
            "owner_id": "381144738155",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d50cf301af55abac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public rt"
            },
            "vpc_id": "vpc-0aa0c8a1bb4f7fcdb"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.laigw",
            "module.networking.aws_vpc.lavpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_assc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccd8cc57f7828a93",
            "route_table_id": "rtb-054625c04e3ec99cd",
            "subnet_id": "subnet-0f83b5fd273cdc31f"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.laigw",
            "module.networking.aws_route_table.publicrt",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.lavpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8dd23a332a4bce2",
            "route_table_id": "rtb-054625c04e3ec99cd",
            "subnet_id": "subnet-0a9698291759824c6"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.laigw",
            "module.networking.aws_route_table.publicrt",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.lavpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lasg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381144738155:security-group/sg-0690540b17aff8784",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0690540b17aff8784",
            "ingress": [
              {
                "cidr_blocks": [
                  "120.138.124.154/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "120.138.124.154/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_sg",
            "name_prefix": null,
            "owner_id": "381144738155",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0aa0c8a1bb4f7fcdb"
          },
          "dependencies": [
            "module.networking.aws_vpc.lavpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381144738155:subnet/subnet-0f83b5fd273cdc31f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.123.1.0/24",
            "id": "subnet-0f83b5fd273cdc31f",
            "map_public_ip_on_launch": true,
            "owner_id": "381144738155",
            "tags": {
              "Name": "public_subnet_1"
            },
            "vpc_id": "vpc-0aa0c8a1bb4f7fcdb"
          },
          "dependencies": [
            "module.networking.aws_vpc.lavpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381144738155:subnet/subnet-0a9698291759824c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.123.2.0/24",
            "id": "subnet-0a9698291759824c6",
            "map_public_ip_on_launch": true,
            "owner_id": "381144738155",
            "tags": {
              "Name": "public_subnet_2"
            },
            "vpc_id": "vpc-0aa0c8a1bb4f7fcdb"
          },
          "dependencies": [
            "module.networking.aws_vpc.lavpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lavpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381144738155:vpc/vpc-0aa0c8a1bb4f7fcdb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-09525dbc87ae72e63",
            "default_route_table_id": "rtb-0614be138faf68d1a",
            "default_security_group_id": "sg-0a01f1b9d0a3c1785",
            "dhcp_options_id": "dopt-c550b2ae",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0aa0c8a1bb4f7fcdb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0614be138faf68d1a",
            "owner_id": "381144738155",
            "tags": {
              "Name": "la-vpc"
            }
          }
        }
      ]
    }
  ]
}